--- a/views/public/html/contract-due.html
+++ b/views/public/html/contract-due.html
@@ -689,7 +689,7 @@ function generateExcelFile() {
         try {
             const base64File = await blobToBase64(blob);
 
-            const response = await axios.post('https://nsnemo.com/send-email', {
+            const response = await axios.post(`${config.APIURL}send-email`, {
                 base64File: base64File
             }, {
                 headers: {
@@ -734,7 +734,7 @@ function generateExcelFile() {
                 startDate += 'T00:00:00Z';
               
                 if (startDate) {
-                    axios.get(`https://nsnemo.com/candidate/contractsdue`, {
+                    axios.get(`${config.APIURL}candidate/contractsdue`, {
                         params: { startDate }
                     })
                     .then(response => {
@@ -788,7 +788,7 @@ function generateExcelFile() {
             function logout() {
                 const userId = localStorage.getItem('userId');
                 if (userId) {
-                    axios.put(`https://nsnemo.com/user/${userId}/logout`)
+                    axios.put(`${config.APIURL}user/${userId}/logout`)
                         .then(response => {
                             console.log('Logged out successfully');
                         })
@@ -816,7 +816,7 @@ function generateExcelFile() {
                 try {
                     const token = localStorage.getItem('token');
                     
-                    const nationalityResponse = await axios.get("https://nsnemo.com/others/country-codes");
+                    const nationalityResponse = await axios.get(`${config.APIURL}others/country-codes`);
                     nationalityData = nationalityResponse.data.countryCodes;
                     
                     const serverResponse = await axios.get("https://nsnemo.com/others/get-vsls", { headers: { "Authorization": token } });
