--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -46,6 +46,9 @@
         66%  {background-position: -100% 66%, 0% 66%, 100% 66%}
         100% {background-position: 0% 100%, 100% 100%, 200% 100%}
       }
+      .hidden-sec, .highcharts-credits {
+        display: none !important;
+      }
 </style>  
 
     <!-- Fonts -->
@@ -528,7 +531,7 @@
                       aria-label="Star themeselection/sneat-html-admin-template-free on GitHub"
                       >Star</a
                     >
-                  </li>
+                  </li> -->
 
                   <!-- User -->
                   <li class="nav-item navbar-dropdown dropdown-user dropdown">
@@ -573,17 +576,52 @@
               <label class="btn btn-dark">
                 <input type="radio" name="options" id="monthlyButton" autocomplete="off"> Monthly
               </label>
+              <input type="hidden" id="currentOption" value="1" />
             </div>
             </div>
+
             <div class=" rounded-3 card p-3 mt-2  " style="background-color: rgb(58, 186, 150);">
-              <div class="d-flex justify-content-between">
+              <div class="justify-content-between">
+                <div class="row">
+                <div class="col-xl-10">
               <h4 class="text-white  p-3 mb-0 ">Nemo Dashboard <div id="datetime" style="font-size: 14px;" class="text-white p-3 ps-0 pb-0"></div></h4>
-              <span>
+            </div>
+            <div class="col-xl-2 p-3 mb-0 " style="color: #FFF;">
+              <div class="form-check">
+                <input type="checkbox" id="filterByUser" name="filterByUser" class="form-check-input">
+                <label class="form-check-label" for="filterByUser">Filter By User</label>
+            </div>
+            <div class="form-check hidden-sec" id="user_list">
+            <select id="userList" class="form-select">
+              </select>
+            </div>
 
     </div>
-            <div class="row m-3 mb-0">
-            <div class=" card mt-3 col m-3 rounded-3 " >
+          </div>
+              <div>
+                </div>
+
+    </div>
+
+    <div class="row hidden-sec hidden-stats" id="chart-sec">
+      <div class="col-sm-6 col-xl-6">
+          <div id="chartcontainer"></div>
+        </div>
+          
+          <div class="col-sm-6 col-xl-6">
+            <div id="chartcontainer1"></div>
+          </div>
+          <div class="col-sm-12 col-xl-12 mt-3">
+            <div id="chartcontainer2"></div>
+          </div>
+        </div>
+            <div class="row m-3 mb-0 stats-count" id="stats-discussion">
+            
+            
+            <div class=" card mt-3 col m-3 rounded-3">
               <div class="card-body">
+               
+
                 <div class="card-title d-flex align-items-start justify-content-between">
                   <div class="avatar flex-shrink-0 me-3">
                     <span class="avatar-initial rounded bg-label-dark"><i class="bx bx-microphone"></i></span>
@@ -606,10 +644,41 @@
                 <h3 class="card-title mb-2">
                     <div id="callCount"></div>
                 </h3>
-                <small class="fw-medium">
+                <small class="fw-medium" id="percentage1">
                     <i id="arrowIcon" class="bx"></i>
                     <span id="percentageChange"></span>
                 </small></div>
+
+              </div>
+            </div>
+            
+            <div class=" card mt-3 col m-3 rounded-3">
+              <div class="card-body">
+               
+
+                <div class="card-title d-flex align-items-start justify-content-between">
+                  <div class="avatar flex-shrink-0 me-3">
+                    <span class="avatar-initial rounded bg-label-success"><i class="bx bx-user"></i></span>
+                  </div>
+                  
+                  <div class="dropdown"  >
+                    <button class="btn p-0" type="button" id="cardOpt3" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <i class="bx bx-dots-vertical-rounded"></i>
+                    </button>
+                    <div class="dropdown-menu dropdown-menu-start "  aria-labelledby="cardOpt3">
+                      <a class="dropdown-item "  href="./report.html">View More</a>
+                    </div>
+                  </div>
+                </div>
+                
+                <span class="fw-medium d-block mb-1 ">Created:</span>
+                <div >
+                  <!-- Spinner 1 will be dynamically inserted here -->
+                
+                <h3 class="card-title mb-2">
+                    <div id="signupCount" class="text-dark"></div>
+                </h3>
+                </div>
 
               </div>
             </div>
@@ -639,7 +708,7 @@
                 <h3 class="card-title mb-2">
                     <div id="proposedCount"></div>
                 </h3>
-                <small class="fw-medium">
+                <small class="fw-medium" id="percentage2">
                     <i id="arrowIcon" class="bx"></i>
                     <span id="proposedArrowIcon"></span>
                     <span id="proposedPercentageChange"></span>
@@ -669,7 +738,7 @@
                 <h3 class="card-title mb-2">
                     <div id="approvedCount"></div>
                 </h3>
-                <small class="fw-medium">
+                <small class="fw-medium" id="percentage3">
                     <i id="arrowIcon" class="bx"></i>
                     <span id="approvedArrowIcon"></span>
                     <span id="approvedPercentageChange"></span>
@@ -698,7 +767,7 @@
                 <h3 class="card-title mb-2">
                     <div id="joinedCount"></div>
                 </h3>
-                <small class="fw-medium">
+                <small class="fw-medium" id="percentage4">
                     <i id="arrowIcon" class="bx"></i>
                     <span id="joinedArrowIcon"></span>
                     <span id="joinedPercentageChange"></span>
@@ -728,7 +797,7 @@
                     <div id="rejectedCount"></div>
                 </h3>
                 
-                <small class="fw-medium">
+                <small class="fw-medium" id="percentage5">
                     <i id="arrowIcon" class="bx"></i>
                     <span id="rejectedArrowIcon"></span>
                     <span id="rejectedPercentageChange"></span>
@@ -737,7 +806,8 @@
             </div>
             </div>
             
-            <div class="row m-1 mt-0">
+            <div class="row m-1 mt-0 stats-count">
+              
               <div class="col-sm-6 col-xl-3">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
@@ -768,21 +838,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-xl-3">
-                <div class=" card mt-3 col m-3 rounded-3 " >
-                  <div class="card-body">
-                    <div class="d-flex align-items-center justify-content-between">
-                      <div class="content-left">
-                        <h3 class="mb-0"><span id="signupCount"></span></h3>
-                        <small>Created </small>
-                      </div>
-                      <span class="badge bg-label-danger rounded-circle p-2">
-                        <i class="bx bx-user bx-sm"></i>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              
               <div class="col-sm-6 col-xl-3">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
@@ -799,7 +855,7 @@
                   
                 </div>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-6 col-xl-3">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
@@ -814,7 +870,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-6 col-xl-3">
                 <div class=" card mt-3 col  rounded-3 " >
                   <div class="card-body ">
                     <div class="d-flex align-items-center justify-content-between">
@@ -830,7 +886,7 @@
                 </div>
               </div>
              
-              <div class="col-sm-4 ">
+              <div class="col-sm-6 col-xl-3">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
@@ -847,7 +903,7 @@
                 </div>
               
             </div>
-           
+          </div>
 
             <div class="container-fluid ">
               <h4 class="ms-0 mt-3 text-white ">Todays All Discussions</h4>
@@ -888,6 +944,7 @@
 
     <script src="../assets/vendor/js/menu.js"></script>
     <!-- endbuild -->
+    <script src="../assets/js/helper.js"></script>
     <script src="daily.js"></script>
     <!-- Vendors JS -->
 
@@ -898,5 +955,11 @@
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/export-data.js"></script>
+<script src="https://code.highcharts.com/modules/accessibility.js"></script>
+
   </body>
 </html>
