implement view dashboard stats

--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -49,6 +49,9 @@
       .hidden-sec, .highcharts-credits {
         display: none !important;
       }
+      .handsymb {
+        cursor: pointer;
+      }
 </style>  
 
     <!-- Fonts -->
@@ -596,7 +599,7 @@
               </select>
             </div>
 
-    </div>
+            </div>
           </div>
               <div>
                 </div>
@@ -618,7 +621,7 @@
             <div class="row m-3 mb-0 stats-count" id="stats-discussion">
             
             
-            <div class=" card mt-3 col m-3 rounded-3">
+            <div class=" card mt-3 col m-3 handsymb rounded-3" onclick="gotoStats('totalcalls')">
               <div class="card-body">
                
 
@@ -651,8 +654,8 @@
 
               </div>
             </div>
-            
-            <div class=" card mt-3 col m-3 rounded-3">
+
+            <div class=" card mt-3 col m-3 handsymb rounded-3" onclick="gotoStats('Created')">
               <div class="card-body">
                
 
@@ -684,7 +687,7 @@
             </div>
             
 
-            <div class=" card mt-3 col m-3 rounded-3 " >
+            <div class=" card mt-3 col m-3 handsymb rounded-3 " onclick="gotoStats('Proposed')">
               <div class="card-body">
                 <div class="card-title d-flex align-items-start justify-content-between">
                  
@@ -717,7 +720,7 @@
               </div>
             </div>
 
-            <div class=" card mt-3 col m-3 rounded-3 " >
+            <div class=" card mt-3 col m-3 handsymb rounded-3 " onclick="gotoStats('Approved')">
               <div class="card-body">
                 <div class="card-title d-flex align-items-start justify-content-between">
                   <div class="avatar me-2">
@@ -746,7 +749,7 @@
               </div>
             </div>
 
-            <div class=" card mt-3 col m-3 rounded-3 " >
+            <div class=" card mt-3 col m-3 handsymb rounded-3 " onclick="gotoStats('Joined')">
               <div class="card-body">
                 <div class="card-title d-flex align-items-start justify-content-between">
                   <div class="avatar flex-shrink-0 me-3">
@@ -775,7 +778,7 @@
               </div>
             </div>
 
-            <div class=" card mt-3 col m-3 rounded-3 " >
+            <div class=" card mt-3 col m-3 handsymb rounded-3 " onclick="gotoStats('Rejected')">
               <div class="card-body">
                 <div class="card-title d-flex align-items-start justify-content-between">
                   <div class="avatar me-2">
@@ -806,9 +809,8 @@
             </div>
             </div>
             
-            <div class="row m-1 mt-0 stats-count">
-              
-              <div class="col-sm-6 col-xl-3">
+            <div class="row m-1 mt-0 stats-count" >
+              <div class="col-sm-6 col-xl-3 handsymb" onclick="gotoStats('SignOff')">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
@@ -823,12 +825,12 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-6 col-xl-3">
+              <div class="col-sm-6 col-xl-3 handsymb" onclick="gotoStats('SignOn')">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
                       <div class="content-left">
-                        <h3 class="mb-0"><span id="contracts"></span></h3>
+                        <h3 class="mb-0"><span id="contracts">0</span></h3>
                         <small>Sign On</small>
                       </div>
                       <span class="badge bg-label-success rounded-circle p-2">
@@ -837,9 +839,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              
-              <div class="col-sm-6 col-xl-3">
+              </div>              
+              <div class="col-sm-6 col-xl-3 handsymb" onclick="gotoStats('OnBoard')">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
@@ -855,8 +856,8 @@
                   
                 </div>
               </div>
-              <div class="col-sm-6 col-xl-3">
-                <div class=" card mt-3 col m-3 rounded-3 " >
+              <div class="col-sm-6 col-xl-3 handsymb" onclick="gotoStats('DueforSignOff')">
+                <div class=" card mt-3 col m-3 rounded-3">
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
                       <div class="content-left">
@@ -869,24 +870,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-sm-6 col-xl-3">
-                <div class=" card mt-3 col  rounded-3 " >
-                  <div class="card-body ">
-                    <div class="d-flex align-items-center justify-content-between">
-                      <div class="content-left">
-                        <h3 class="mb-0"><span id="callsCount"></span></h3>
-                        <small>Todays Calls count</small>
-                      </div>
-                      <span class="badge bg-label-success rounded-circle p-2">
-                        <i class="bx bx-user bx-sm"></i>
-                      </span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-             
-              <div class="col-sm-6 col-xl-3">
+              </div>             
+              <div class="col-sm-6 col-xl-3 handsymb" onclick="gotoStats('DueforRenewal')">
                 <div class=" card mt-3 col m-3 rounded-3 " >
                   <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
