resolve dashboard issue

--- a/views/public/html/daily.html
+++ b/views/public/html/daily.html
@@ -607,11 +607,11 @@
     </div>
 
     <div class="row hidden-sec hidden-stats" id="chart-sec">
-      <div class="col-sm-6 col-xl-6">
+      <div class="col-sm-12 col-xl-12">
           <div id="chartcontainer"></div>
         </div>
           
-          <div class="col-sm-6 col-xl-6">
+          <div class="col-sm-12 col-xl-12 mt-3">
             <div id="chartcontainer1"></div>
           </div>
           <div class="col-sm-12 col-xl-12 mt-3">
