change remark to company

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -881,7 +881,7 @@
                                           <th scope="col">Engine</th>
                                           <th scope="col">Type of Vessel</th>
                                           <th scope="col">Position</th>
-                                          <th scope="col">Remarks</th>
+                                          <th scope="col">Company</th>
                                         </tr>
                                       </thead>
                                       <tbody id="experienceTableBody"></tbody>
