--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -876,6 +876,7 @@
                                           <th scope="col">To</th>
                                           <th scope="col">Vessel Name</th>
                                           <th scope="col">Flag</th>
+                                          <th scope="col">GRT</th>
                                           <th scope="col">DWT</th>
                                           <th scope="col">KWT</th>
                                           <th scope="col">Engine</th>
