--- a/views/public/html/viewapplicationform.html
+++ b/views/public/html/viewapplicationform.html
@@ -287,6 +287,11 @@
                     <td>OFF 02</td>
                   </tr>
                   <tr>
+                    <td>RPSL Number</td>
+                    <td>:</td>
+                    <td>RPSL-CHN-012</td>
+                  </tr> 
+                  <tr>
                     <td>Revision No</td>
                     <td>:</td>
                     <td>00</td>
@@ -325,6 +330,10 @@
               </td>
               <td width="161">
                 <input readonly type="text" name="avb_date" id="avb_date" />
+              </td>
+              <td rowspan="4" width="100" align="center" valign="middle">
+                <img src="./no-images.png" id="profileImage" style="width: 150px; height: 150px;">
+                <div id="no-image" style="width: 150px; height: 150px; display: none; border: 1px solid #ccc;"></div>
               </td>
             </tr>
             <tr style="height: 35px">
@@ -373,7 +382,7 @@
               <td style="height: 35px" width="123">
                 <p>Address</p>
               </td>
-              <td style="height: 35px" colspan="3" width="434">
+              <td style="height: 35px" colspan="4" width="434">
                 <input readonly type="text" name="c_ad1" id="c_ad1" />
               </td>
             </tr>
@@ -387,7 +396,7 @@
               <td style="height: 35px" width="123">
                 <p>No. of Children</p>
               </td>
-              <td style="height: 35px" width="170">
+              <td style="height: 35px" width="170" colspan="2">
                 <input readonly type="text" name="totalChild" id="totalChild" />
               </td>
             </tr>
@@ -405,7 +414,7 @@
               <td style="height: 35px" width="123">
                 <p>Weight</p>
               </td>
-              <td style="height: 35px" width="170">
+              <td style="height: 35px" width="170" colspan="2">
                 <input readonly type="text" name="weight" id="weight" />
               </td>
             </tr>
@@ -419,7 +428,7 @@
               <td style="height: 35px" width="123">
                 <p>Boiler Suit size</p>
               </td>
-              <td style="height: 35px" width="170">
+              <td style="height: 35px" width="170" colspan="2">
                 <input type="text" name="boiler_suit_size" id="boiler_suit_size" />
               </td>
             </tr>
