resolve sea services issue

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1492,7 +1492,7 @@
                               Sea Service Records
                             </h4>
 
-                            <div class="table-responsive text-center">
+                            <div class="table-responsive text-center text-nowrap">
                               <table
                                 id="seaServiceTable"
                                 class="table table table-striped table-bordered"
@@ -1500,23 +1500,21 @@
                               >
                                 <thead>
                                   <tr>
-                                    <th scope="col">S.no</th>
+                                    <th scope="col">S.No.</th>
 
+                                    <th scope="col">From</th>
+                                    <th scope="col">To</th>
                                     <th scope="col">Company</th>
                                     <th scope="col">Rank</th>
                                     <th scope="col">Vessel</th>
-                                    <th scope="col">Type</th>
+                                    <th scope="col">Flag</th>
+                                    <th scope="col">KWT</th>
+                                    <th scope="col">GRT</th>
                                     <th scope="col">DWT</th>
-                                    <th scope="col">
-                                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;From&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                    </th>
-                                    <th scope="col">
-                                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;To&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                                    </th>
-                                    <th scope="col">Total&nbsp;MMDD</th>
-                                    <th scope="col">
-                                      Reason&nbsp;for&nbsp;Sign&nbsp;Off
-                                    </th>
+                                    <th scope="col">Engine</th>
+                                    <th scope="col">Vessel Type</th>
+                                    <th scope="col">Total MMDD</th>
+                                    <th scope="col">Reason for Sign Off</th>
                                     <th scope="col">Actions</th>
                                   </tr>
                                 </thead>
